fix: some overflow issues

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -2,7 +2,8 @@
 }
 
 .block-content-wrapper {
-    width: 100%;
+  width: 100%;
+  max-width: calc(100% - 40px);
 }
 
 .block-content {
